Improve run command in readme